last commit delete item

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,20 +1,28 @@
-<h1> Tasks</h1>
+<h1>My tasks</h1>
 
-<% @tasks.each do |task| %>
-  <% if task.completed %>
-   <i class = "fa fa-check-square"></i>
-   <%= link_to task.title, task_path(task.id) %>
+<ul id="tasks">
+  <% @tasks.each do |task| %>
+    <li>
+      <% if task.completed %>
+        <i class="fa fa-check-square-o"></i>
+      <% else %>
+        <i class="fa fa-square-o"></i>
+      <% end %>
+      <%= link_to task.title, task_path(task.id) %>
+      ·
+      <%= link_to task_path(task.id), method: :delete, data: { confirm: "Delete #{task.title}?" } do %>
+        <i class="fa fa-trash-o" aria-hidden="true"></i>
+      <% end %>
+    </li>
+  <% end %>
+</ul>
 
-  <% else  %>
-   <i class = "fa fa-square"></i>
-   <%= link_to task.title, task_path(task.id) %>
-   <% end %>
-  </p>
+<hr>
 
-  <%= link_to task_path(task.id), method: :delete, data: {confirm: 'Delete #{task.title}?'} do %>
-          <i class="far fa-trash-alt" aria-hidden= 'true'></i>
-        <% end %>
+<%= link_to tasks_new_path do %>
+  <i class="fa fa-plus"></i> Add a new task
 <% end %>
 
 
-  <%= link_to ' + add a new task', tasks_new_path %>
+
+
